// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/ui/Dialog default 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-fluid p-dialog-mask p-component-overlay p-component-overlay-enter"
    style="z-index: 1014;"
  >
    <div
      aria-modal="true"
      class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
      role="dialog"
      style="z-index: 1015; visibility: visible; display: none; transform-origin: top; top: 0px; left: 0px;"
    >
      <div
        class="p-dialog-header"
      >
        <!---->
         
        <div
          class="p-dialog-header-icons"
        >
          <!---->
           
          <button
            aria-label="close"
            class="p-dialog-header-icon p-dialog-header-close p-link"
            tabindex="-1"
            type="button"
          >
            <span
              class="p-dialog-header-close-icon pi pi-times"
            />
            <span
              class="p-ink"
            />
          </button>
        </div>
      </div>
       
      <div
        class="p-dialog-content"
        style="max-height: 70vh;"
      />
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`storyshots components/ui/Dialog with header and content 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-fluid p-dialog-mask p-component-overlay p-component-overlay-enter"
    style="z-index: 1015;"
  >
    <div
      aria-labelledby="pv_id_23_header"
      aria-modal="true"
      class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
      role="dialog"
      style="z-index: 1016; visibility: visible; display: none; transform-origin: top; top: 0px; left: 0px;"
    >
      <div
        class="p-dialog-header"
      >
        <span
          class="p-dialog-title"
          id="pv_id_23_header"
        >
          This is the header
        </span>
         
        <div
          class="p-dialog-header-icons"
        >
          <!---->
           
          <button
            aria-label="close"
            class="p-dialog-header-icon p-dialog-header-close p-link"
            tabindex="-1"
            type="button"
          >
            <span
              class="p-dialog-header-close-icon pi pi-times"
            />
            <span
              class="p-ink"
            />
          </button>
        </div>
      </div>
       
      <div
        class="p-dialog-content"
        style="max-height: 70vh;"
      >
        
        This is the dialog content
      
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`storyshots components/ui/Dialog with header, content and actions 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-fluid p-dialog-mask p-component-overlay p-component-overlay-enter"
    isactionform="true"
    style="z-index: 1016;"
  >
    <div
      aria-labelledby="pv_id_24_header"
      aria-modal="true"
      class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
      role="dialog"
      style="z-index: 1017; visibility: visible; display: none; transform-origin: top; top: 0px; left: 0px;"
    >
      <div
        class="p-dialog-header"
      >
        <span
          class="p-dialog-title"
          id="pv_id_24_header"
        >
          This is the header
        </span>
         
        <div
          class="p-dialog-header-icons"
        >
          <!---->
           
          <button
            aria-label="close"
            class="p-dialog-header-icon p-dialog-header-close p-link"
            tabindex="-1"
            type="button"
          >
            <span
              class="p-dialog-header-close-icon pi pi-times"
            />
            <span
              class="p-ink"
            />
          </button>
        </div>
      </div>
       
      <div
        class="p-dialog-content"
        style="max-height: 70vh;"
      >
        
        This is the dialog content
      
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;
